--- a/demo-sites/src/pages/SharinPixDemoSite.page
+++ b/demo-sites/src/pages/SharinPixDemoSite.page
@@ -1,3 +1,3 @@
 <apex:page controller="SharinPixDemoSite" sidebar="false" showHeader="false">
-    <iframe src="{! Url }" style="border:0;width: 100%; height: 400px;"/>
+    <iframe src="{!url}" style="border:0;width: 100%; height: 400px;"/>
 </apex:page>
