--- a/sharinpix/src/aura/SharinPix/SharinPix.cmp
+++ b/sharinpix/src/aura/SharinPix/SharinPix.cmp
@@ -1,9 +1,10 @@
-<aura:component access="GLOBAL" implements="force:appHostable,flexipage:availableForAllPageTypes,forceCommunity:availableForAllPageTypes" controller="SharinPixLightningController">
+<aura:component access="GLOBAL" implements="force:hasRecordId,force:appHostable,flexipage:availableForAllPageTypes,forceCommunity:availableForAllPageTypes" controller="SharinPixLightningController">
   <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
   <aura:registerEvent name="Event" type="c:Event"/>
   <aura:dependency resource="c:Loading"/>
   <aura:dependency resource="ui:message"/>
   <aura:attribute name="AlbumId" type="String" access="GLOBAL"/>
+  <aura:attribute name="recordId" type="String"/>
   <aura:attribute name="url" type="String"/>
   <aura:attribute name="loading" type="Boolean" default="true"/>
   <aura:attribute name="height" type="Integer" access="GLOBAL"/>
