--- a/demo-tag-to-field/src/pages/SharinPixDemoTagToField.page
+++ b/demo-tag-to-field/src/pages/SharinPixDemoTagToField.page
@@ -11,7 +11,7 @@
             if (e.data.payload.tag_image.tag.name === "tag_name") { // Specify tag name
                 var albumId = e.data.payload.tag_image.image.album_id;
                 var imageUrl = e.data.payload.tag_image.image.thumbnails.large;
-                azhar.SharinPixDemoTagToFieldController.updateField(
+                SharinPixDemoTagToFieldController.updateField(
                     JSON.stringify({ albumId: albumId, imageUrl: imageUrl }),
                     function(res) {
                         document.rform.submit(); // Reload page when done.
