--- a/sharinpix-free/src/aura/Image/Image.css
+++ b/sharinpix-free/src/aura/Image/Image.css
@@ -3,6 +3,10 @@
 	min-height: 180px;
 	background: rgb(244, 246, 249);
 }
+.THIS.errormessages {
+	min-height: 70px !important;
+}
+
 .THIS .control:focus{
 	outline: none;
 }
