--- a/sharinpix/src/aura/SharinPix/SharinPix.cmp
+++ b/sharinpix/src/aura/SharinPix/SharinPix.cmp
@@ -8,6 +8,7 @@
   <aura:attribute name="AlbumId" type="String" access="GLOBAL"/>
   <aura:attribute name="recordId" type="String"/>
   <aura:attribute name="height" type="Integer" access="GLOBAL"/>
+  <aura:attribute name="enableAction" type="boolean" access="GLOBAL"/>
   <aura:attribute name="url" type="String"/>
   <aura:attribute name="loading" type="Boolean" default="true"/>
   <aura:attribute name="fullscreen" type="Boolean" default="false"/>
