--- a/sharinpix/src/aura/SharinPix/SharinPix.css
+++ b/sharinpix/src/aura/SharinPix/SharinPix.css
@@ -11,10 +11,10 @@
 }
 
 .THIS .sharinpix-iframe.fullscreen {
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: 90px;
   left: 0;
   bottom: 0;
   right: 0;
-  z-index: 999;
+  z-index: 9999;
 }
