--- a/sharinpix/src/components/TagAction.component
+++ b/sharinpix/src/components/TagAction.component
@@ -5,20 +5,13 @@
 	    var eventer = window[eventMethod];
 	    var messageEvent = eventMethod == "attachEvent" ? "onmessage" : "message";
 	    eventer(messageEvent,function(e) {
-	        if (event.origin !== "https://scpix-pr-773.herokuapp.com"){return;}
-	        console.log(e.data);
+	        if (event.origin !== "https://app.sharinpix.com"){return;}
 	        if (e.data.name === 'tag-image-new'){
 	            //check if contains action
 	            if (e.data.payload.tag_image.tag.action !== null){
-	            	console.log('Action is not null');
-	            	console.log(e.data.payload.tag_image);
-	            	console.log(JSON.stringify(e.data.payload.tag_image));
 	            	TagActionCtrl.executeCommand("{!recordId}",JSON.stringify(e.data.payload.tag_image), function(result, event){
-			    		console.log(result, event);
+			    		
 			    	});
-	            }
-	            else {
-	            	console.log('Action is null');
 	            }
 	        }
 	    },false);
