--- a/sharinpix/src/components/TagAction.component
+++ b/sharinpix/src/components/TagAction.component
@@ -1,5 +1,5 @@
 <apex:component access="global" allowDML="true" controller="TagActionController" >
-    <apex:attribute name="recordId" description="Id of the current record" type="String"/>
+    <apex:attribute name="recordId" description="Id of the current record" type="String" access="global"/>
     <script>
         var eventMethod = window.addEventListener ? "addEventListener" : "attachEvent";
         var eventer = window[eventMethod];
@@ -8,8 +8,7 @@
             if (event.origin !== "https://app.sharinpix.com"){return;}
             if (e.data.name === 'tag-image-new'){
                 if (e.data.payload.tag_image.tag.action !== null){
-                    TagActionController.executeCommand("{!recordId}",JSON.stringify(e.data.payload.tag_image), function(result, event){
-                        
+                    sharinpix.TagActionController.executeCommand("{!recordId}",JSON.stringify(e.data.payload.tag_image), function(result, event){
                     });
                 }
             }
