--- a/sharinpix-free/src/aura/Image/Image.cmp
+++ b/sharinpix-free/src/aura/Image/Image.cmp
@@ -1,5 +1,5 @@
 <aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,forceCommunity:availableForAllPageTypes" access="global" controller="ImageController">
-	<aura:attribute name="recordId" type="String"/>
+	<aura:attribute name="recordId" type="String" access="global"/>
 	<aura:attribute name="loading" type="Boolean"/>
 	<aura:attribute name="errorMessage" type="String"/>
 	<aura:dependency resource="ui:message"/>
@@ -7,45 +7,59 @@
 	<aura:attribute name="image" type="Object"/>
 	<aura:attribute name="index" type="Integer"/>
 	<aura:attribute name="total" type="Integer"/>
+	<aura:attribute name="displayButtons" type="Boolean"/>
 	<aura:handler name="init" value="{! this }" action="{! c.doInit }"/>
   	<aura:handler event="aura:locationChange" action="{! c.doReload }"/>
   	<aura:handler name="change" value="{! v.recordId }" action="{! c.doReload }"/>
   	<aura:method name="reload" action="{! c.doReload }"/>
-	<aura:handler event="c:Uploaded" action="{!c.uploaded}"/>
-	<aura:handler event="c:ErrorHandling" action="{!c.displayError}"/>
-
-	<aura:if isTrue="{! v.errorMessage }">
-      <ui:message title="Error" severity="Error" class="errormessages">
-        {! v.errorMessage }
-      </ui:message>
+  	<aura:handler event="c:Uploaded" action="{!c.uploaded}"/>
+  	<aura:handler event="c:ErrorHandling" action="{!c.displayError}"/>
+  	<aura:attribute name="height" type="integer" access="global" />
+    
+  	<aura:if isTrue="{! !empty(v.errorMessage) }">
+  		<span>
+	      <ui:message title="Error" severity="Error" class="errormessages">
+	        {! v.errorMessage }
+	      </ui:message>
+	  	</span>
     </aura:if>
-	<div class="image-container">
-		<aura:if isTrue="{! v.loading }">
+	<div class="image-container hide-buttons" aura:id="image-container">    	
+		<aura:if isTrue="{! v.loading == true }">
 			<lightning:spinner />
 		<aura:set attribute="else">
+			
 			<aura:if isTrue="{! v.total > 0 }">
-			<c:SingleImage attachmentId="{!v.image.Id}" />
-	    		<aura:set attribute="else">
-	    			<div class="uploader-no-images-btn">
-					<c:Uploader recordId="{!v.recordId}" label="Upload Images"/>
-	    			</div>
-	    		</aura:set>
+	    		<c:SingleImage attachmentId="{!v.image.Id}" height="{!v.height}"/>
+    		<aura:set attribute="else">
+    			<div class="img-placeholder"></div>
+    			<div class="uploader-no-images-btn sharinpix-buttons">
+    				<c:Uploader recordId="{!v.recordId}" label="Upload Images"/>
+    				<p>No image</p>
+    			</div>
+    		</aura:set>
 	    	</aura:if>
+	    	<aura:if isTrue="{! v.total > 0 }">
+				<div class="toggle-area" onclick="{!c.toggle}"></div>
+			</aura:if>
 	    	<aura:if isTrue="{! v.total > 1 }">
-	    		<button class="control control-previous" label="Previous" onclick="{! c.doPrevious }">
+	    		<button aura:id="sharinpix-control-buttons" class="control control-previous" label="Previous" onclick="{! c.doPrevious }">
 	    			<lightning:icon iconName="utility:chevronleft" size="large" alternativeText="Previous Image"/>
 		    	</button>
-		    	<button class="control control-next" label="Next" onclick="{! c.doNext }">
+		    	<button aura:id="sharinpix-control-buttons" class="control control-next" label="Next" onclick="{! c.doNext }">
 		    		<lightning:icon iconName="utility:chevronright" size="large" alternativeText="Next Image"/>
 		    	</button>
 		    </aura:if>
-		    <aura:if isTrue="{! v.total > 0 }">
-		    	<div class="uploader-btn">
-				<c:Uploader recordId="{!v.recordId}"/>
+		    <aura:if isTrue="{! v.total > 0 &amp;&amp; v.displayButtons }">
+		    	<div class="button-container" aura:id="sharinpix-action-buttons">
+		    		<div class="uploader-btn">
+			    		<c:Uploader recordId="{!v.recordId}"/>
+			    	</div>
+					<div class="delete-btn" onclick="{! c.doDelete }">
+						<label title="Delete">
+							<lightning:icon iconName="utility:delete" size="x-small" alternativeText="Delete"/>
+						</label>
+					</div>
 		    	</div>
-		    	<button class="delete-btn" label="Delete" onclick="{! c.doDelete }" title="Delete">
-					<lightning:icon iconName="action:delete" alternativeText="Delete"/>
-				</button>
 			</aura:if>
 		</aura:set>
 		</aura:if>
