--- a/sharinpix-free/src/aura/SingleImage/SingleImage.cmp
+++ b/sharinpix-free/src/aura/SingleImage/SingleImage.cmp
@@ -1,11 +1,21 @@
 <aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,forceCommunity:availableForAllPageTypes" access="global" controller="ImageController">
 	<aura:attribute name="attachmentId" type="String" access="global"/>
+    <aura:attribute name="height" type="integer" access="global" />
 	<aura:attribute name="loading" type="Boolean"/>
 	<aura:handler name="init" value="{! this }" action="{! c.doInit }"/>
 	<aura:registerEvent name="ImageDeleted" type="c:ImageDeleted"/>
+	<aura:attribute name="style" type="string" access="global" />
 	<aura:handler name="change" value="{! v.attachmentId }" action="{! c.doReload }"/>
-	<div class="container">
-		<img aura:id="image" src="{! '/servlet/servlet.FileDownload?file=' + v.attachmentId}" onload="{! c.onLoaded }"/>
+	<div class="container" style="{! v.style }">
+		<aura:if isTrue="{! !empty(v.attachmentId)}">
+			<img aura:id="image" src="{! '/servlet/servlet.FileDownload?file=' + v.attachmentId}" onload="{! c.onLoaded }"/>
+		<aura:set attribute="else">
+			<div class="img-placeholder"></div>
+			<div class="no-image">
+				No image
+			</div>
+		</aura:set>
+		</aura:if>
 		<aura:if isTrue="{! v.loading }">
 			<lightning:spinner />
 		</aura:if>
