--- a/sharinpix-free/src/aura/SingleImage/SingleImage.css
+++ b/sharinpix-free/src/aura/SingleImage/SingleImage.css
@@ -5,11 +5,63 @@
 	position: absolute;
 	background: rgba(255, 255, 255, 0.5);
 }
-.THIS img{
+.THIS.container {
+  	text-align: center;
+}
+.THIS.container img{
+	min-width: 50px;
+	min-height: 50px;
+	background: #b0b0b0;
+	max-width: 100%;
+  	max-height: 100%;
+  	vertical-align: middle;
+}
+
+.THIS .img-placeholder{
 	min-width: 50px;
 	min-height: 180px;
-	height: auto;
+	position: relative;
 	width: 100%;
-	margin: 0 auto;
-	background: #b0b0b0;
+	height: 100%;
+	overflow: hidden;
+	background: rgba(0, 105, 144, 0.4);
+}
+.THIS .img-placeholder:before, 
+.THIS .img-placeholder:after{
+	position: absolute;
+	content: "";
+	display: block;
+	background: rgba(255, 255, 255, 0.5);
+}
+.THIS .img-placeholder:before {
+	top: 5%;
+	padding-bottom: 20%;
+	width: 20%;
+	left: 5%;
+	border-radius: 100%;
+}
+.THIS .img-placeholder:after {
+	-webkit-transform: translateY(20%) rotate(-45deg);
+	-moz-transform: translateY(20%) rotate(-45deg);
+	-ms-transform: translateY(20%) rotate(-45deg);
+	-o-transform: translateY(20%) rotate(-45deg);
+	transform: translateY(20%) rotate(-45deg);
+	-webkit-transform-origin: right 50%;
+	-moz-transform-origin: right 50%;
+	-ms-transform-origin: right 50%;
+	-o-transform-origin: right 50%;
+	transform-origin: right 50%;
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 100%;
+	width: 300%;
+}
+.THIS .no-image{
+	position: absolute;
+    top: 0;
+    margin: 0 auto;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
