--- a/sharinpix-free/src/aura/Uploader/Uploader.cmp
+++ b/sharinpix-free/src/aura/Uploader/Uploader.cmp
@@ -13,7 +13,7 @@
 	<aura:registerEvent name="ErrorHandling" type="c:ErrorHandling"/>
 	<div aura:id="uploader" class="uploader-container">
 		<label for="{!v.uploaderId}" title="Upload">
-			<lightning:icon iconName="utility:upload" alternativeText="Upload Images"/>
+			<lightning:icon iconName="utility:upload" size="x-small" alternativeText="Upload Images"/>
 			<div class="progress" style="{! 'height: ' + v.progress+'%;' }"></div>
 		</label>
 		<input id="{!v.uploaderId}" type="file" name="file" class="file" aura:id="file" onchange="{!c.fileInputChange}" multiple="multiple" accept="image/*"/>
