--- a/sharinpix-free/src/aura/Image/Image.cmp
+++ b/sharinpix-free/src/aura/Image/Image.cmp
@@ -15,6 +15,8 @@
   	<aura:handler event="c:Uploaded" action="{!c.uploaded}"/>
   	<aura:handler event="c:ErrorHandling" action="{!c.displayError}"/>
   	<aura:attribute name="height" type="integer" access="global" />
+  	<aura:attribute name="interval" type="integer" access="global" />
+  	<aura:attribute name="intervalInstance" type="Object"/>
     
   	<aura:if isTrue="{! !empty(v.errorMessage) }">
   		<span>
