--- a/sharinpix-free/src/pages/testLuc.page
+++ b/sharinpix-free/src/pages/testLuc.page
@@ -1,16 +1,17 @@
 <apex:page showHeader="false" sidebar="false">
-	<apex:includeLightning />
+	<!-- <apex:includeLightning />
     <div id="lightning"></div>
     <script>
         $Lightning.use("sharinpix_free:uploaderApp", function() {
           $Lightning.createComponent("sharinpix_free:image",
           { 
             recordId : "0030Y000002vHdP",
+            height: 300
           },
           "lightning",
           function(cmp) {
             // do some stuff
           });
         });
-    </script>
+    </script> -->
 </apex:page>
