--- a/sharinpix-free/src/aura/Uploader/Uploader.cmp
+++ b/sharinpix-free/src/aura/Uploader/Uploader.cmp
@@ -8,7 +8,7 @@
 	<aura:attribute name="n_uploading" type="Integer"/>
 	<aura:attribute name="n_uploaded" type="Integer"/>
 	<aura:attribute name="progress" type="Integer"/>
-	<aura:attribute name="filenamePrefix" type="Integer"/>
+	<aura:attribute name="filenamePrefix" type="string"/>
 	<aura:registerEvent name="Uploaded" type="c:Uploaded"/>
 	<aura:registerEvent name="ErrorHandling" type="c:ErrorHandling"/>
 	<div aura:id="uploader" class="uploader-container">
