--- a/sharinpix-free/src/aura/SingleImage/SingleImage.cmp
+++ b/sharinpix-free/src/aura/SingleImage/SingleImage.cmp
@@ -1,5 +1,6 @@
 <aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,forceCommunity:availableForAllPageTypes" access="global" controller="ImageController">
 	<aura:attribute name="attachmentId" type="String" access="global"/>
+	<aura:attribute name="source" type="String" access="global"/>
     <aura:attribute name="height" type="integer" access="global" />
 	<aura:attribute name="loading" type="Boolean"/>
 	<aura:handler name="init" value="{! this }" action="{! c.doInit }"/>
@@ -8,7 +9,7 @@
 	<aura:handler name="change" value="{! v.attachmentId }" action="{! c.doReload }"/>
 	<div class="container" style="{! v.style }">
 		<aura:if isTrue="{! !empty(v.attachmentId)}">
-			<img aura:id="image" src="{! '/servlet/servlet.FileDownload?file=' + v.attachmentId}" onload="{! c.onLoaded }"/>
+			<img aura:id="image" src="{! v.source }" onload="{! c.onLoaded }"/>
 		<aura:set attribute="else">
 			<div class="img-placeholder"></div>
 			<div class="no-image">
@@ -16,7 +17,7 @@
 			</div>
 		</aura:set>
 		</aura:if>
-		<aura:if isTrue="{! v.loading }">
+		<aura:if isTrue="{! !empty(v.attachmentId) &amp;&amp; v.loading }">
 			<lightning:spinner />
 		</aura:if>
 	</div>
