--- a/sharinpix-free/src/aura/SingleImage/SingleImage.cmp
+++ b/sharinpix-free/src/aura/SingleImage/SingleImage.cmp
@@ -2,6 +2,12 @@
 	<aura:attribute name="attachmentId" type="String" access="global"/>
     <aura:attribute name="height" type="integer" access="global" />
 	<aura:attribute name="loading" type="Boolean"/>
+	
+	<aura:attribute name="text" type="String" />
+	<aura:attribute name="verticalAlign" type="String" />
+	<aura:attribute name="textSize" type="String" />
+	<aura:attribute name="color" type="String" />
+
 	<aura:handler name="init" value="{! this }" action="{! c.doInit }"/>
 	<aura:registerEvent name="ImageDeleted" type="c:ImageDeleted"/>
 	<aura:attribute name="style" type="string" access="global" />
