--- a/sharinpix/src/components/TagAction.component
+++ b/sharinpix/src/components/TagAction.component
@@ -1,19 +1,17 @@
 <apex:component access="global" allowDML="true" controller="TagActionController" >
-	<apex:attribute name="recordId" description="Id of the current record" type="String"/>
-	<script>
-	    var eventMethod = window.addEventListener ? "addEventListener" : "attachEvent";
-	    var eventer = window[eventMethod];
-	    var messageEvent = eventMethod == "attachEvent" ? "onmessage" : "message";
-	    eventer(messageEvent,function(e) {
-	        if (event.origin !== "https://app.sharinpix.com"){return;}
-	        if (e.data.name === 'tag-image-new'){
-	            //check if contains action
-	            if (e.data.payload.tag_image.tag.action !== null){
-	            	TagActionCtrl.executeCommand("{!recordId}",JSON.stringify(e.data.payload.tag_image), function(result, event){
-			    		
-			    	});
-	            }
-	        }
-	    },false);
-	</script>
+    <apex:attribute name="recordId" description="Id of the current record" type="String" access="global"/>
+    <script>
+        var eventMethod = window.addEventListener ? "addEventListener" : "attachEvent";
+        var eventer = window[eventMethod];
+        var messageEvent = eventMethod == "attachEvent" ? "onmessage" : "message";
+        eventer(messageEvent,function(e) {
+            if (event.origin !== "https://app.sharinpix.com"){return;}
+            if (e.data.name === 'tag-image-new'){
+                if (Object.getOwnPropertyNames(e.data.payload.tag_image.tag.action).length !== 0){
+                    sharinpix.TagActionController.executeCommand("{!recordId}",JSON.stringify(e.data.payload.tag_image), function(result, event){
+                    });
+                }
+            }
+        },false);
+    </script>
 </apex:component>
