--- a/sharinpix-free/src/aura/Image/Image.cmp
+++ b/sharinpix-free/src/aura/Image/Image.cmp
@@ -36,7 +36,7 @@
     		<aura:set attribute="else">
     			<div class="img-placeholder"></div>
     			<div class="uploader-no-images-btn sharinpix-buttons">
-    				<c:Uploader recordId="{!v.recordId}" filenamePrefix="{! v.prefix }" label="Upload Images" parentCmp="{! globalId }"/>
+    				<c:Uploader recordId="{!v.recordId}" filenamePrefix="{! v.prefix }" label="Upload Images" eventIdentifier="{! globalId }"/>
     				<p>No image</p>
     			</div>
     		</aura:set>
@@ -55,7 +55,7 @@
 		    <aura:if isTrue="{! v.total > 0 &amp;&amp; v.displayButtons }">
 		    	<div class="button-container" aura:id="sharinpix-action-buttons">
 		    		<div class="uploader-btn">
-			    		<c:Uploader recordId="{!v.recordId}" filenamePrefix="{! v.prefix }"  parentCmp="{! globalId }" />
+			    		<c:Uploader recordId="{!v.recordId}" filenamePrefix="{! v.prefix }"  eventIdentifier="{! globalId }" />
 			    	</div>
 					<div class="delete-btn" onclick="{! c.doDelete }">
 						<label title="Delete">
