--- a/sharinpix-free/src/aura/Uploader/Uploader.cmp
+++ b/sharinpix-free/src/aura/Uploader/Uploader.cmp
@@ -9,7 +9,7 @@
 	<aura:attribute name="n_uploaded" type="Integer"/>
 	<aura:attribute name="progress" type="Integer"/>
 	<aura:attribute name="filenamePrefix" type="string" access="global"/>
-	<aura:attribute name="parentCmp" type="string" access="global" />
+	<aura:attribute name="eventIdentifier" type="string" access="global" />
 	<aura:registerEvent name="Uploaded" type="c:Uploaded"/>
 	<aura:registerEvent name="ErrorHandling" type="c:ErrorHandling"/>
 	<div aura:id="uploader" class="uploader-container">
