--- a/sharinpix-free/src/aura/SingleImage/SingleImage.cmp
+++ b/sharinpix-free/src/aura/SingleImage/SingleImage.cmp
@@ -4,11 +4,11 @@
     <aura:attribute name="height" type="integer" access="global" />
 	<aura:attribute name="loading" type="Boolean"/>
 	
-	<aura:attribute name="text" type="String" />
-	<aura:attribute name="linkText" type="String" />
-	<aura:attribute name="verticalAlign" type="String" />
-	<aura:attribute name="textSize" type="String" />
-	<aura:attribute name="color" type="String" />
+	<aura:attribute name="text" type="String" access="global"/>
+	<aura:attribute name="linkText" type="String" access="global"/>
+	<aura:attribute name="verticalAlign" type="String" access="global"/>
+	<aura:attribute name="textSize" type="String" access="global"/>
+	<aura:attribute name="color" type="String" access="global"/>
 
 	<aura:handler name="init" value="{! this }" action="{! c.doInit }"/>
 	<aura:registerEvent name="ImageDeleted" type="c:ImageDeleted"/>
