renaming single upload to single image

--- a/sharinpix-free/src/aura/Image/Image.cmp
+++ b/sharinpix-free/src/aura/Image/Image.cmp
@@ -18,7 +18,7 @@
   	<aura:attribute name="interval" type="integer" access="global" />
   	<aura:attribute name="intervalInstance" type="Object"/>
   	<aura:attribute name="prefix" type="string" access="global"/>
-  	<aura:attribute name="singleUpload" type="Boolean" access="global" />
+  	<aura:attribute name="singleImage" type="Boolean" access="global" />
     
   	<aura:if isTrue="{! !empty(v.errorMessage) }">
   		<span>
