--- a/sharinpix-free/src/aura/Image/Image.cmp
+++ b/sharinpix-free/src/aura/Image/Image.cmp
@@ -37,7 +37,7 @@
     		<aura:set attribute="else">
     			<div class="img-placeholder"></div>
     			<div class="uploader-no-images-btn sharinpix-buttons">
-    				<c:Uploader recordId="{!v.recordId}" filenamePrefix="{! v.prefix }" label="Upload Images" eventIdentifier="{! globalId }"/>
+    				<c:Uploader recordId="{!v.recordId}" filenamePrefix="{! v.prefix }" label="Upload Images" eventIdentifier="{! globalId }" singleImage="{! v.singleImage }" />
     				<p>No image</p>
     			</div>
     		</aura:set>
@@ -55,9 +55,11 @@
 		    </aura:if>
 		    <aura:if isTrue="{! v.total > 0 &amp;&amp; v.displayButtons }">
 		    	<div class="button-container" aura:id="sharinpix-action-buttons">
-		    		<div class="uploader-btn">
-			    		<c:Uploader recordId="{!v.recordId}" filenamePrefix="{! v.prefix }"  eventIdentifier="{! globalId }" />
-			    	</div>
+					<aura:if isTrue="{! !v.singleImage }">
+						<div class="uploader-btn">
+							<c:Uploader recordId="{!v.recordId}" filenamePrefix="{! v.prefix }"  eventIdentifier="{! globalId }" />
+						</div>
+					</aura:if>
 					<div class="delete-btn" onclick="{! c.doDelete }">
 						<label title="Delete">
 							<lightning:icon iconName="utility:delete" size="x-small" alternativeText="Delete"/>
