--- a/sharinpix-free/src/aura/Uploader/Uploader.cmp
+++ b/sharinpix-free/src/aura/Uploader/Uploader.cmp
@@ -18,6 +18,6 @@
 			<lightning:icon iconName="utility:upload" size="x-small" alternativeText="Upload Images"/>
 			<div class="progress" style="{! 'height: ' + v.progress+'%;' }"></div>
 		</label>
-		<input id="{!v.uploaderId}" type="file" name="file" class="file" aura:id="file" onchange="{!c.fileInputChange}" multiple="multiple" accept="image/*"/>
+		<input id="{!v.uploaderId}" type="file" name="file" class="file" aura:id="file" onchange="{!c.fileInputChange}" multiple="{! !v.singleImage }" accept="image/*"/>
 	</div>
 </aura:component>
