--- a/sharinpix-free/src/aura/Image/Image.cmp
+++ b/sharinpix-free/src/aura/Image/Image.cmp
@@ -18,6 +18,7 @@
   	<aura:attribute name="interval" type="integer" access="global" />
   	<aura:attribute name="intervalInstance" type="Object"/>
   	<aura:attribute name="prefix" type="string" access="global"/>
+	<aura:attribute name="uploadChoice" type="string" access="global" />
     
   	<aura:if isTrue="{! !empty(v.errorMessage) }">
   		<span>
