--- a/sharinpix-free/src/aura/Image/Image.cmp
+++ b/sharinpix-free/src/aura/Image/Image.cmp
@@ -18,7 +18,6 @@
   	<aura:attribute name="interval" type="integer" access="global" />
   	<aura:attribute name="intervalInstance" type="Object"/>
   	<aura:attribute name="prefix" type="string" access="global"/>
-	<aura:attribute name="uploadChoice" type="string" access="global" />
   	<aura:attribute name="multiple" type="Boolean" access="global" />
     
   	<aura:if isTrue="{! !empty(v.errorMessage) }">
@@ -30,7 +29,7 @@
     </aura:if>
 	<div class="image-container hide-buttons" aura:id="image-container">    	
 		<aura:if isTrue="{! v.loading == true }">
-			<lightning:spinner />
+			<lightning:spinner alternativeText="Loading in progress" />
 		<aura:set attribute="else">
 			
 			<aura:if isTrue="{! v.total > 0 }">
@@ -38,7 +37,7 @@
     		<aura:set attribute="else">
     			<div class="img-placeholder"></div>
     			<div class="uploader-no-images-btn sharinpix-buttons">
-    				<c:Uploader recordId="{!v.recordId}" filenamePrefix="{! v.prefix }" label="Upload Images" eventIdentifier="{! globalId }" multiple="{! v.multiple }" uploadChoice="{! v.uploadChoice }" />
+    				<c:Uploader recordId="{!v.recordId}" filenamePrefix="{! v.prefix }" label="Upload Images" eventIdentifier="{! globalId }" multiple="{! v.multiple }" />
     				<p>No image</p>
     			</div>
     		</aura:set>
@@ -58,7 +57,7 @@
 		    	<div class="button-container" aura:id="sharinpix-action-buttons">
 					<aura:if isTrue="{! v.multiple }">
 						<div class="uploader-btn">
-							<c:Uploader recordId="{!v.recordId}" filenamePrefix="{! v.prefix }"  eventIdentifier="{! globalId }" multiple="{! v.multiple }" uploadChoice="{! v.uploadChoice }" />
+							<c:Uploader recordId="{!v.recordId}" filenamePrefix="{! v.prefix }"  eventIdentifier="{! globalId }" multiple="{! v.multiple }" />
 						</div>
 					</aura:if>
 					<div class="delete-btn" onclick="{! c.doDelete }">
