--- a/sharinpix-free/src/pages/SharinPixUploadApi.page
+++ b/sharinpix-free/src/pages/SharinPixUploadApi.page
@@ -1,43 +1,45 @@
 <apex:page  sidebar="false" showHeader="false" >
-	<apex:includeScript value="https://code.jquery.com/jquery-3.1.1.slim.js"/>
+	<apex:includeScript value="{!$Resource.sharinpix_free__jquery}"/>
   <script>
+  	var MAX_SIZE = 25000000;
     jQuery(document).ready(function($) {
       window.addEventListener('message',function(event) {
-        console.log('event: ', event);
-        console.log('received response:  ',event.data);
         if (event.data.name == 'new-upload'){
           if (event.data.fileType === 'Attachment'){
             upload_attachment(event.data, event.data.eventIdentifier);
           }
-          if (event.data.fileType === 'ContentDocument'){
-            upload_content_document(event.data, event.data.eventIdentifier);
-          }
         }
       },false);
 
-      // setInterval(function(event){
       window.parent.postMessage({name: 'loaded'}, '*'); 
-      // }, 300)
       
       var uploading = 0;
       var uploaded = 0;
 
       var upload_attachment = function(payload, eventIdentifier){
         for (var i = 0; i < payload.files.length; i++) {
+        	if (payload.files[i].size > MAX_SIZE){
+        		window.parent.postMessage({name: 'error', message: '[{"message": "File size cannot exceed ' + MAX_SIZE + ' bytes. ' +
+              'Selected file size: ' + payload.files[i].size + '."}]', eventIdentifier: eventIdentifier}, '*');
+        		continue;
+        	}
           uploading += 1;
           upload_file(payload.files[i], payload.recordId, eventIdentifier, payload.prefix, function(err, res){
-              console.log(res);
-              if (uploading === uploaded){
-                console.log('uploaded');
-                window.parent.postMessage({name: 'uploaded', eventIdentifier: eventIdentifier}, '*');
-              }
+          	if (res === true){
+          		uploaded += 1;
+	            if (uploading === uploaded){
+	              window.parent.postMessage({name: 'uploaded', eventIdentifier: eventIdentifier}, '*');
+	            }
+          	}
+          	if (err != null){
+          		window.parent.postMessage({name: 'error', message: err, eventIdentifier: eventIdentifier}, '*');
+          	}
           })
         }
       }
 
       var upload_file = function(file, parentId, eventIdentifier, prefix, callback) {
         filetoBase64(file, function(err, content){
-          
           var attachment_object = {
                     parentId: parentId,
                     Body: content, 
@@ -53,27 +55,23 @@
               headers: {'Authorization': 'Bearer {!$Api.Session_ID}', 'Content-Type': 'application/json'},
               xhr: function(){
                 var xhr = new window.XMLHttpRequest();
-                //Upload progress
                 xhr.upload.addEventListener("progress", function(evt){
                   if (evt.lengthComputable) {
                     var percentComplete = evt.loaded / evt.total;
-                    //Do something with upload progress
-                    console.log('upload',percentComplete);
+                    console.log(percentComplete);
                     window.parent.postMessage({name: 'uploading', percent: 30 + Math.round(uploaded/uploading * 70), eventIdentifier: eventIdentifier}, '*');
                   }
                 }, false);
                 return xhr;
               },
               success: function(response) {
-                  uploaded += 1;
                   callback(null, true)
+              },
+              error: function(errorObj, errorMessage, errorThrown){
+              	callback(errorObj.responseText, false);
               }
            });
         })
-      }
-
-      var upload_content_document = function(payload, eventIdentifier){
-        console.log('content document here');
       }
 
       var filetoBase64 = function(file, callback){
