--- a/sharinpix-free/src/pages/testLuc.page
+++ b/sharinpix-free/src/pages/testLuc.page
@@ -1,17 +1,39 @@
 <apex:page showHeader="false" sidebar="false">
-	<!-- <apex:includeLightning />
+  <!--c:sharinpix parameters="{!'{"path":"/pagelayout/' + $currentPage.parameters.id + '", "admin":true}'}" /-->
+  <c:SharinPix parameters="{'path': '/pagelayout/{!$CurrentPage.parameters.id}', 'abilities': {'{!$CurrentPage.parameters.id}': { 'Access': {'see': true, 'image_upload': true, 'image_list': true}}}}" secreturl="sharinpix://af1c895a-6ddb-4875-a092-a8c88c8844ed:mcH-xhCzecawrxgfPTR4aeqJQH-kbd2dSutJxmJyvyL3qOs@ombr.ngrok.io/api/v1"/>
+    <!--sharinpix:image imageId="" transformations=""/-->
+	<!--apex:includeLightning />
+
     <div id="lightning"></div>
+    <div id="lightning2"></div>
+    <div id="lightning3"></div>
     <script>
-        $Lightning.use("sharinpix_free:uploaderApp", function() {
-          $Lightning.createComponent("sharinpix_free:image",
+        $Lightning.use("c:uploaderApp", function() {
+          $Lightning.createComponent("c:uploader",
           { 
-            recordId : "0030Y000002vHdP",
-            height: 300
+          	recordId : "003240000046yLA",
+            label: "Upload"
           },
           "lightning",
           function(cmp) {
             // do some stuff
           });
+          $Lightning.createComponent("c:SingleImage",
+          { 
+            attachmentId : "00P2400000FdzzrEAB",
+          },
+          "lightning2",
+          function(cmp) {
+            // do some stuff
+          });
+          $Lightning.createComponent("c:image",
+          { 
+            recordId : "003240000046yLA",
+          },
+          "lightning3",
+          function(cmp) {
+            // do some stuff
+          });
         });
-    </script> -->
+    </script-->
 </apex:page>
