--- a/sharinpix-free/src/aura/Uploader/Uploader.cmp
+++ b/sharinpix-free/src/aura/Uploader/Uploader.cmp
@@ -11,6 +11,7 @@
 	<aura:attribute name="filenamePrefix" type="string" access="global"/>
 	<aura:attribute name="eventIdentifier" type="string" access="global" />
 	<aura:attribute name="multiple" type="Boolean" access="global" />
+	<aura:attribute name="uploadChoice" type="string" access="global" />
 
 	<aura:attribute name="loaded" type="Boolean" />
 
